# haskell-from-first-principles-book

./: .gitignore  23.hs  ch-12.hs  ch-2.hs  ch-4.hs  ch-5-ex0.hs  ch-5.hs  ch-7.hs  ch-8.hs  ch-9.hs  chp-6.hs  chp18.hs  chpt-10.hs  chpt-11.hs  chpt18.hs  chpt20.hs
Addition/: Addition.hs  WordNumberTest.hs  addition.cabal  coarbitrary.hs
Ch27/: CHANGELOG.md  README.md  package.yaml
Ch27/test-suite/: Main.hs
ch-14/: Ch14.hs  ch14.cabal
ch-15/: Ch15.hs  ch15.cabal
chp21/: chp21.cabal  chp21.hs
chp22/: README.md  chp22.cabal  chp22.hs
chp23/: 23.hs  README.md  chp23.cabal
chp24/: LogParser.hs  README.md  altParsing.hs  backTracking.hs  chp24.cabal  chp24.hs  fractions.hs  learnParsers.hs  parsingConfigurationFiles.hs
chp25/: README.md  chp25.cabal
chp25/src/: Main.hs
chp26/: chp26.cabal
chp26/src/: Main.hs  Scotty.hs  horse.hs
chpt16/: ch16.hs
chpt17/: Ch17.hs  chpt17.cabal
chpt18/: chpt18.cabal  chpt18.hs
chpt29/: CHANGELOG.md  README.md  package.yaml
chpt29/test-suite/: Main.hs
