name:                chpt18
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/chpt18#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable chpt18
  hs-source-dirs:      .
  main-is:             chpt18.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , checkers